--- a/birthday.html
+++ b/birthday.html
@@ -69,7 +69,7 @@
 
         <div id="videoWrap" class="videoWrap">
             <video id="birthdayVideo" controls preload="metadata" width="100%">
-            <source src="assets/video/bday.mp4" type="video/mp4" />
+            <source src="assets/ceremony.mp4" type="video/mp4" />
             Your browser does not support the video tag.
             </video>
         </div>
